chore: add revalidation route
